--- a/myFirstPlaybook.yaml
+++ b/myFirstPlaybook.yaml
@@ -2,23 +2,14 @@
 - hosts: all
   become : yes
   tasks:
-  - name: i want install tree
-    apt:
-     name: tree
-     state: present
-
-  - name : i want to install git
-    apt:
-     name: git
-     state: present
-
   - name : i want to install apache2
     apt:
      name: apache2
      state: present
+    when: anisble_os_family=="Debian"  
 
   - name : i want to start apache2
     service:
      name: apache2
      state: started
-
+    when: anisble_os_family=="Debian"
