--- a/myFirstPlaybook.yaml
+++ b/myFirstPlaybook.yaml
@@ -6,10 +6,10 @@
     apt:
      name: apache2
      state: present
-    when: anisble_os_family=="Debian"  
+    when: ansible_os_family=="Debian"  
 
   - name : i want to start apache2
     service:
      name: apache2
      state: started
-    when: anisble_os_family=="Debian"
+    when: ansible_os_family=="Debian"
