--- a/myFirstPlaybook.yaml
+++ b/myFirstPlaybook.yaml
@@ -13,3 +13,15 @@
      name: apache2
      state: started
     when: ansible_os_family=="Debian"
+
+  - name : i want to install redhat
+    yum:
+     name: httpd
+     state: present
+    when: ansible_os_family=="Red-hat" 
+
+  - name : i want to start Red-hat
+    service:
+     name: httpd
+     state: started
+    when: ansible_os_family=="Red-hat"      
