--- a/mydebug.yaml
+++ b/mydebug.yaml
@@ -9,3 +9,16 @@
   - name : i want to display my task result
     debug:
       msg: "{{myfirsttaskresult}}"  
+
+  - name : install git
+    apt:
+     name: git
+     state: present
+    when: myfirsttaskresult.stderr==" "   
+
+  - name: install tree
+    apt:
+     name: tree
+     state: present
+    when: myfirsttaskresult.stderr!=" "       
+ 
