--- a/myerror.yml
+++ b/myerror.yml
@@ -11,7 +11,7 @@
     apt:
      name: tree
      statrrrre: present
-    ignore-errors: yes 
+    ignore_errors: yes 
 
   - name: install wget
     apt:
