--- a/myfilehandling.yml
+++ b/myfilehandling.yml
@@ -9,4 +9,10 @@
   - name: i want to copy static file into  ansible nodes
     copy:
      src: mystaticfile.txt
-     dest: /home/ubuntu/mystaticfile.txt   
+     dest: /home/ubuntu/mystaticfile.txt 
+
+  - name: i want to copy a dynamic file into ansible nodes
+    template: 
+     src: mydynamicfile.j2
+     dest: /var/www/html/index.html
+     notify: restartwebservers     
