--- a/myfilehandling.yml
+++ b/myfilehandling.yml
@@ -20,9 +20,9 @@
      dest: /var/www/html/index.html
     notify:  restartwebserver
 
-  - handlers:
-    -name: restartwebserver
-    service:
-      name: apache2
-      state: restarted   
+    handlers:
+    - name:   restartwebserver
+      service: 
+       name: apache2
+       state: restarted
         
